--- a/src/components/pages/page-main/styles.css
+++ b/src/components/pages/page-main/styles.css
@@ -17,7 +17,7 @@ h1{
 .form-wrapper{
     top: 0px;
     position: absolute;
-    padding: 3%;
+    /* padding: 3%; */
     width: 100%;
     height: 100%;
     backdrop-filter: blur(10px);
